--- a/password_generator.ipynb
+++ b/password_generator.ipynb
@@ -24,7 +24,13 @@
     "\n",
     "formated_output = ''.join(map(str, letters + numbers + character)) # Convert back to string with string concating\n",
     "\n",
-    "print(f\"your password is: [{formated_output}]\")"
+    "# Shuffle the combined string\n",
+    "password_list = list(formated_output)  # Convert to list\n",
+    "random.shuffle(password_list)  # Shuffle the list\n",
+    "shuffled_password = ''.join(password_list)  # Convert back to string\n",
+    "\n",
+    "\n",
+    "print(f\"your password is: {shuffled_password}\")"
    ]
   },
   {
@@ -67,13 +73,27 @@
     "new_password = ''.join(password_to_list)  # Convert back to string\n",
     "\n",
     "\n",
-    "print(new_password)"
+    "print(f\"your password is: {new_password}\")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
