--- a/password_generator.ipynb
+++ b/password_generator.ipynb
@@ -75,6 +75,63 @@
     "\n",
     "print(f\"your password is: {new_password}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "# List of alphabets, numbers, and special characters to use in the password\n",
+    "alphabets = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+    "numbers_list = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9']\n",
+    "character_list = ['!', '@', '#', '$', '%', '&', '*', '?', '+', '(', ')']\n",
+    "\n",
+    "# Welcome message for the user\n",
+    "print(\"Welcome to pyPassword Generator!\")\n",
+    "\n",
+    "# Asking user for the number of letters, numbers, and special characters for the password\n",
+    "nr_letters = int(input('How many letters would you like in your password?\\n'))\n",
+    "nr_numbers = int(input('How many numbers would you like in your password?\\n'))\n",
+    "nr_characters = int(input('How many characters would you like in your password?\\n'))\n",
+    "\n",
+    "# Empty list to store the randomly generated password components (letters, numbers, characters)\n",
+    "password_list = []\n",
+    "\n",
+    "# Loop to add random letters based on user's input\n",
+    "for char in range(1, nr_letters + 1):\n",
+    "    random_letter = random.choice(alphabets)\n",
+    "    password_list += random_letter\n",
+    "\n",
+    "# Loop to add random numbers based on user's input\n",
+    "for char in range(1, nr_numbers + 1):\n",
+    "    random_num = random.choice(numbers_list)\n",
+    "    password_list += random_num\n",
+    "\n",
+    "# Loop to add random special characters based on user's input\n",
+    "for char in range(1, nr_characters + 1):\n",
+    "    random_char = random.choice(character_list)\n",
+    "    password_list += random_char\n",
+    "\n",
+    "# Display the generated password list before shuffling (optional)\n",
+    "print(\"Before shuffling:\\n\", password_list)\n",
+    "\n",
+    "# Shuffle the list to randomize the order of letters, numbers, and special characters\n",
+    "random.shuffle(password_list)\n",
+    "\n",
+    "# Display the password list after shuffling\n",
+    "print(\"After shuffling:\\n\", password_list)\n",
+    "\n",
+    "# Convert the shuffled list back to a string to form the final password\n",
+    "password = ''\n",
+    "for char in password_list:\n",
+    "    password += char\n",
+    "\n",
+    "# Display the final generated password\n",
+    "print(f\"Your password is: {password}\")\n"
+   ]
   }
  ],
  "metadata": {
