--- a/password_generator.ipynb
+++ b/password_generator.ipynb
@@ -22,7 +22,7 @@
     "nr_characters = int(input('How many characters would you like in your password?\\n'))\n",
     "character = random.sample(character_list, nr_characters) # Randomize the special character selecte according to user's input\n",
     "\n",
-    "formated_output = (map(str, letters + numbers + character)) # Convert back to string with string concating\n",
+    "formated_output = (map(str, letters + numbers + character)) # Convert back to string with string concatinatingng\n",
     "\n",
     "# Shuffle the combined string\n",
     "password_list = list(formated_output)  # Convert to list\n",
